--- a/templates/index.html
+++ b/templates/index.html
@@ -6,16 +6,16 @@
     <title>Search App</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="./style.css"></link>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="container mt-5">
         <h1>Search for Content</h1>
         <form id="searchForm" class="row g-3">
-            <div class="col-md-8">
+            <div class="col-8 col-sm-6 col-md-8">
                 <input type="text" name="query" class="form-control" placeholder="Enter search term" required>
             </div>
-            <div class="col-md-3">
+            <div class="col-4 col-sm-6 col-md-3">
                 <select id="contentType" class="form-select">
                     <option value="">All</option>
                     <option value="youtube">YouTube Videos</option>
@@ -24,8 +24,8 @@
                     <option value="blogs">Blog Posts</option>
                 </select>
             </div>
-            <div class="col-md-1">
-                <button type="submit" class="btn btn-primary">Search</button>
+            <div class="col-12 col-md-1">
+                <button type="submit" class="btn btn-primary w-100">Search</button>
             </div>
         </form>
 
@@ -46,7 +46,7 @@
                 success: function(response) {
                     $('#results').empty();
                     for (const type in response) {
-                        $('#results').append(`<h3>${type.charAt(0).toUpperCase() + type.slice(1)}</h3><ul>`);
+                        $('#results').append(`<h3>${type.charAt(0).toUpperCase() + type.slice(1)}</h3><ul>`); 
                         response[type].forEach(item => {
                             $('#results').append(`
                                 <li>
